# art_ws

./: .catkin_workspace  .gitignore  README  build_instructions.md
src/: simulation.launch  system-debug.launch  system-hector.launch  system-viz.launch  system.launch
src/LMS1xx-master/include/LMS1xx/: LMS1xx.h
src/LMS1xx-master/src/: LMS1xx.cpp  LMS1xx_node.cpp  debug_log2
src/PylonDetectionCPP/: CMakeLists.txt  DisplayImage.cpp  PylonDetection.cpp
src/art-motorcommands/: .hg_archival.txt  .hgignore  CMakeLists.txt  package.xml
src/art-motorcommands/src/: Vector2.h  best_fit_circle_code.h  curvatureApproach.h  motor_command.h  motor_driver.cpp  move_and_rotate_command.h  predefined_variables.h
src/art-pathplanning-2014/: CMakeLists.txt  package.xml  reset_simulation  rviz_config.rviz  simulation.launch  simulation_config.rviz
src/art-pathplanning-2014/include/path_planner/: path_planner.h
src/art-pathplanning-2014/src/: path_planner.cpp
src/art-status-2014/: CMakeLists.txt  package.xml
src/art-status-2014/data/: blankMap.txt  globalMap.txt  testMapA.txt
src/art-status-2014/src/: status.cpp
src/calibration/: CMakeLists.txt  README.md  package.xml
src/calibration/data/: 2015-03-04_21-24-15_regular  2015-03-04_21-36-42_ransac  2015-03-10_20-11-50_lmeds
src/calibration/src/: calibration.cpp
src/flagdetection_node/: CMakeLists.txt  README  package.xml
src/flagdetection_node/include/flagdetection_node/: flagBox.h  flagBoxArray.h  flagdetection_node.h
src/flagdetection_node/msg/: flagBox.msg  flagBoxArray.msg
src/flagdetection_node/src/: flagdetection_node.cpp
src/ggb/: CMakeLists.txt  package.xml
src/ggb/include/ggb/: ggb.h
src/ggb/src/: ggb_tx_rx.cpp
src/gps/: CMakeLists.txt  package.xml
src/gps/include/gps/: com_port.h
src/gps/src/: com_port.cpp  gps_node.cpp
src/hector_slam-0.3.3/hector_mapping/: hector_config.rviz
src/hector_slam-0.3.3/hector_mapping/launch/: hector.launch
src/imu/: CMakeLists.txt  package.xml
src/imu/gtest/: CTestTestfile.cmake
src/imu/include/imu/: com_port.h
src/imu/msg/: Orientation.msg
src/imu/src/: com_port.cpp  imu.cpp
src/kalman_filter/: CMakeLists.txt  package.xml
src/kalman_filter/scripts/: talker.py
src/linedetection_node/: CMakeLists.txt  package.xml
src/linedetection_node/include/linedetection_node/: linedetection_node.h
src/linedetection_node/src/: line_detection_node.cpp
src/localmapserver/: CMakeLists.txt  mainpage.dox  package.xml
src/localmapserver/src/: main.cpp
src/primes_tutorial/: Primes_Tutorial.odt
src/pylon_detection/: capture.py
src/pylon_detection2/: pylondetection.py
src/sensor_recorder/: CMakeLists.txt  package.xml
src/sensor_recorder/src/: sensor_recorder.cpp
src/simulator/: CMakeLists.txt  package.xml
src/simulator/data/: curvyMap.txt  globalMap2.txt  racing.txt  straightMap.txt
src/simulator/src/: main.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/include/vision/: lib_flag_detection.hpp  lib_line_detection.hpp
src/vision/src/: flag_detection.cpp  histogram_detection.cpp  line_detection_thresh.cpp
src/vision/src/utils/: EvalUtils.cpp  EvalUtils.hpp  Timer.hpp
src/vision/src/vision/: Clusters.cpp  Clusters.hpp  lib_flag_detection.cpp  lib_line_detection.cpp  linear_transform.cpp  linear_transform.hpp
